SERVER-10359 Remove code page switching from Windows shell