src/mongo/shell/dbshell.cpp
@@ -1135,10 +1135,6 @@ int _main( int argc, char* argv[], char **envp ) {
 #ifdef _WIN32
 int wmain(int argc, wchar_t* argvW[], wchar_t* envpW[]) {
     static mongo::StaticObserver staticObserver;
-    UINT initialConsoleInputCodePage = GetConsoleCP();
-    UINT initialConsoleOutputCodePage = GetConsoleOutputCP();
-    SetConsoleCP( CP_UTF8 );
-    SetConsoleOutputCP( CP_UTF8 );
     int returnCode;
     try {
         WindowsCommandLine wcl(argc, argvW, envpW);
@@ -1148,8 +1144,6 @@ int wmain(int argc, wchar_t* argvW[], wchar_t* envpW[]) {
         cerr << "exception: " << e.what() << endl;
         returnCode = 1;
     }
-    SetConsoleCP( initialConsoleInputCodePage );
-    SetConsoleOutputCP( initialConsoleOutputCodePage );
     ::_exit(returnCode);
 }
 #else // #ifdef _WIN32
